--- a/main.ipynb
+++ b/main.ipynb
@@ -1,1 +1,60 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdadef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from app.dotenv import base_dir, data_dir\n",
+    "from app.model.model import  Model\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c04b312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('dotenv params:', {os.getenv('PARAM1')})\n",
+    "print('base_dir:', base_dir)\n",
+    "print('data_dir:', data_dir)\n",
+    "\n",
+    "model = Model()\n",
+    "print('model:', model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae562deb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
